feat: add a resolved field for posts
