# apps/server/src/main/java/com/skkil/sync/post/dto/response/GetPostResponse.java
@@ -19,6 +19,7 @@ public record GetPostResponse(
     Long likeCount,
     Long commentCount,
     boolean bookmarked,
+    boolean resolved,
     OffsetDateTime createdAt) {
 
   @Builder
