# apps/server/src/main/java/com/skkil/sync/post/dto/response/GetPostsResponse.java
@@ -19,6 +19,7 @@ public record GetPostsResponse(CursorPaginationResponse<Post> posts) {
       Author author,
       @Nullable Project project,
       String content,
+      boolean resolved,
       OffsetDateTime createdAt) {}
 
   public static record Author(String name, String handle) {}
